// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card it should render CardFooter 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.15;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  border-style: solid;
  border-color: colorBorder;
  border-color: #c8cccf;
  border-bottom-width: 0;
  border-left-width: 0;
  border-right-width: 0;
  border-top-width: 1px;
  min-width: 0;
  margin-top: 0.75rem;
  padding-top: 0.75rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    Just | footer | things
  </div>
</div>
`;

exports[`Card it should render children 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.15;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  border-width: 2px;
  border-style: solid;
  border-color: colorBorder;
  border-radius: 4px;
  border-color: #c8cccf;
  min-width: 0;
  padding: 1.25rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  >
    I AM A JEDI!!!!
  </div>
</div>
`;

exports[`Card it should render default values 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.15;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  border-width: 2px;
  border-style: solid;
  border-color: colorBorder;
  border-radius: 4px;
  border-color: #c8cccf;
  min-width: 0;
  padding: 1.25rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`Card it should render default values unless overridden by the component 1`] = `
.emotion-1 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.15;
  color: #282a2b;
  font-weight: 400;
}

.emotion-1 *,
.emotion-1 *::after,
.emotion-1 *::before {
  box-sizing: border-box;
}

.emotion-0 {
  border-width: 2px;
  border-style: solid;
  border-color: colorBorder;
  border-radius: 4px;
  border-color: #c8cccf;
  min-width: 0;
  margin-bottom: 4.75rem;
  padding: 1.25rem;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;
